checkout ext changes

--- a/extensions/admin-action-send-order-to-bydesign/locales/en.default.json
+++ b/extensions/admin-action-send-order-to-bydesign/locales/en.default.json
@@ -1,5 +1,5 @@
 {
-  "name": "Send Order to Bydesign",
+  "name": "Sync with Bydesign",
   "button_text": "Sync with Bydesign",
   "welcome": "Welcome to the {{target}} extension!"
 }
