--- a/extensions/checkout-email-validation/locales/en.default.json
+++ b/extensions/checkout-email-validation/locales/en.default.json
@@ -3,5 +3,5 @@
   "iWouldLikeAFreeGiftWithMyOrder": "I would like to receive a free gift with my order",
   "addAFreeGiftToMyOrder": "Add a free gift to my order",
   "attributeChangesAreNotSupported": "Attribute changes are not supported in this checkout",
-  "disabledCheckout": "Checkout Disabled for Rep--en"
+  "disabledCheckout": "Checkout Disabled for Rep"
 }
